--- a/src/app/components/popup/popup.scss
+++ b/src/app/components/popup/popup.scss
@@ -1,10 +1,10 @@
-@import 'variables';
+@import '../../node_modules/pattern-library/core/pattern-library/headers';
 
 pop-up {
 
     .overlay {
         align-items: center;
-        background-color: rgba(color(neutral-medium), 0.8);
+        background-color: rgba(os-color(gray), 0.8);
         bottom: 0;
         display: flex;
         height: 100vh;
@@ -18,11 +18,9 @@ pop-up {
 
     [role="dialog"] {
         align-items: flex-start;
-        background-color: color(neutral-lightest);
+        background-color: ui-color(white);
         display: flex;
         flex-direction: column;
-        font-size: 1.6rem;
-        line-height: 1.5625;
         max-width: 80rem;
         padding: 2rem 2.5rem;
 
@@ -31,11 +29,7 @@ pop-up {
         }
 
         button {
-            background-color: color(orange);
-            border: 0;
-            color: color(neutral-lightest);
-            font-size: 1.4rem;
-            padding: 1.5rem 2.5rem;
+            @include button(primary);
         }
     }
 
