--- a/src/app/pages/blog/blog.scss
+++ b/src/app/pages/blog/blog.scss
@@ -1,5 +1,4 @@
-@import 'variables';
-@import 'mixins';
+@import '../../node_modules/pattern-library/core/pattern-library/headers';
 
 .blog.page {
     .content .meta {
@@ -12,15 +11,16 @@
         display: flex;
         flex-flow: column nowrap;
 
-        @include desktop {
-            background-color: lighten(color(neutral-lighter), 8%);
+        @include wider-than($tablet-max) {
+            background-color: ui-color(form-bg);
+            border-top: thin solid ui-color(form-border);
             padding: 2rem 0;
         }
 
         .boxed {
             display: block;
 
-            @include desktop {
+            @include wider-than($tablet-max) {
                 align-items: stretch;
                 display: flex;
                 flex-flow: row wrap;
@@ -56,7 +56,7 @@
             position: relative;
             width: 100%;
 
-            @media (min-width: 1400px) {
+            @include wider-than($content-max) {
                 background-size: calc(28rem + 80vw);
                 height: calc(4rem + 40vw);
                 max-height: 80vh;
@@ -64,16 +64,16 @@
         }
 
         > .boxed {
-            max-width: $boxed-width;
+            max-width: $content-max;
             padding: 2rem 1.5rem 8rem;
         }
 
         .meta {
-            color: color(neutral-light);
+            color: text-color(helper);
         }
 
         .author {
-            color: color(cyan);
+            color: os-color(light-blue);
             font-style: italic;
 
             &::after {
@@ -95,11 +95,10 @@
         }
 
         .tags span {
-            background-color: lighten(color(neutral-lighter), 8%);
-            color: color(gray);
+            @include set-font(helper-label);
+
+            color: text-color(helper);
             display: inline-block;
-            font-size: 1.4rem;
-            line-height: 1;
             margin-right: 1rem;
             padding: 1rem;
         }
@@ -112,7 +111,7 @@
         .articles .boxed {
             padding: 0 1.5rem;
 
-            @include desktop {
+            @include wider-than($tablet-max) {
                 padding: 0;
             }
         }
@@ -124,10 +123,10 @@
         flex-flow: row nowrap;
         justify-content: center;
         margin: auto;
-        max-width: $boxed-width;
+        max-width: $content-max;
         padding-bottom: 2rem;
 
-        @include phone {
+        @include width-up-to($phone-max) {
             align-items: center;
             display: block;
             padding-left: 1.5rem;
@@ -135,22 +134,22 @@
         }
 
         .cta {
-            background-color: color(orange);
-            color: color(neutral-lightest);
+            background-color: os-color(orange);
+            color: text-color(white);
             margin-left: 1rem;
             margin-right: 1rem;
             padding: 1.25rem 3rem;
 
-            @include phone {
+            @include width-up-to($phone-max) {
                 margin: 0;
             }
         }
 
         .rss-link i {
             background-color: none;
-            color: color(orange);
-            font-size: 3rem;
-            margin: 1rem;
+            color: os-color(orange);
+            margin: 1.5rem;
+            transform: scale(2);
         }
 
     }
