--- a/src/app/pages/give/give.scss
+++ b/src/app/pages/give/give.scss
@@ -1,16 +1,13 @@
-@import 'variables';
-@import 'mixins';
+@import '../../node_modules/pattern-library/core/pattern-library/headers';
 
 .give-page {
 
-    background-color: rgba(color(neutral-lighter), 0.2);
-
     .btn-orange {
-        background-color: color(orange);
+        background-color: os-color(orange);
     }
 
     .hero {
-        color: color(neutral-lightest);
+        color: text-color(white);
         line-height: 1.67;
         padding: 4em 0;
         position: relative;
@@ -21,12 +18,10 @@
             position: absolute;
             top: 0;
             width: 100%;
-            z-index: -1;
         }
 
         .background-overlay {
-            background-color: color(green);
-            filter: saturate(110%);
+            background-color: os-color(green);
         }
 
         .background-image {
@@ -40,60 +35,16 @@
 
         .text-content {
             align-items: flex-start;
+            position: relative;
 
-            @include desktop {
+            @include wider-than($tablet-max) {
                 align-items: center;
             }
         }
 
-        h1 {
-            color: inherit;
-            font-size: 4.8rem;
-            line-height: 1;
-            margin-bottom: 2.5rem;
-        }
-
-        p {
-            margin: 0;
-        }
-
-        .recurring-section {
-            label {
-                color: color(neutral-lightest);
-                font-size: 1.6rem;
-                position: relative;
-            }
-
-            [type=checkbox] {
-                height: 0;
-                margin: 0;
-                padding: 0;
-                visibility: hidden;
-                width: 0;
-
-                &:checked + .checkbox-proxy::before {
-                    bottom: 0;
-                    content: '✓';
-                    font-weight: bold;
-                    left: 0;
-                    position: absolute;
-                }
-            }
-
-            $box-size: 0.875em;
-
-            .checkbox-proxy {
-                border: solid 1px color(neutral-lightest);
-                display: inline-block;
-                height: $box-size;
-                margin-right: 0.5em;
-                width: $box-size;
-            }
-        }
     }
 
     .instructions {
-        font-size: 1.7rem;
         padding: 8rem 1.5rem 4rem;
         text-align: center;
     }
@@ -106,7 +57,7 @@
         margin: 3rem auto;
         max-width: 100%;
 
-        @include phone {
+        @include width-up-to($phone-max) {
             width: 100%;
         }
 
@@ -124,11 +75,11 @@
             justify-content: center;
 
             [type="submit"] {
-                background-color: color(gold);
-                flex-basis: 50%;
-                padding: 2rem 5rem;
+                @include button(primary);
 
-                @include phone {
+                background-color: os-color(gold);
+
+                @include width-up-to($phone-max) {
                     flex-basis: 100%;
                 }
             }
@@ -147,26 +98,25 @@
 
         .amount,
         .amount-input {
-            font-size: 1.6rem;
-            font-weight: 500;
-            height: 4rem;
+            height: $form-element-height;
 
             &.selected {
-                background-color: color(cyan);
-                color: color(neutral-lightest);
+                background-color: os-color(light-blue);
+                color: text-color(white);
             }
         }
 
         .amount {
-            background-color: color(neutral-lightest);
-            color: $text-dark;
+            @include center();
+            background-color: ui-color(white);
+            color: text-color(normal);
             cursor: pointer;
             flex: 0 0 10rem;
             margin-bottom: 1rem;
             padding: 0.5rem 0;
             text-align: center;
 
-            @include phone {
+            @include width-up-to($phone-max) {
                 flex-basis: calc(50% - 0.5rem);
             }
         }
@@ -176,23 +126,22 @@
             max-width: 21rem;
             padding-left: 1.5rem;
 
-            @include phone {
+            @include width-up-to($phone-max) {
                 flex-basis: 100%;
                 max-width: 100%;
             }
 
             &::placeholder {
-                font-size: 1.8rem;
+                @include set-font(body-large);
+
                 font-style: italic;
-                font-weight: normal;
             }
         }
     }
 
     hr {
-        background: color(neutral-lighter);
+        background: ui-color(form-border);
         border: 0;
-        color: color(neutral-lighter);
         height: 0.4rem;
         margin: 2rem 0;
         opacity: 0.5;
@@ -218,7 +167,7 @@
         .col {
             flex-basis: calc(50% - 2rem);
 
-            @include phone {
+            @include width-up-to($phone-max) {
                 flex-basis: 100%;
             }
         }
@@ -234,8 +183,8 @@
     }
 
     .cta {
-        background-color: color(orange);
-        color: color(neutral-lightest);
+        background-color: os-color(orange);
+        color: text-color(white);
         margin-bottom: 7rem;
     }
 
@@ -250,5 +199,11 @@
     .testing-only {
         padding-left: 1.5rem;
         width: 100%;
+    }
+
+    form .boxed {
+        @extend %form;
+
+        max-width: 100%;
     }
 }
