--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -25,7 +25,7 @@
     }
 
     h2 {
-        @extend %text-h1;
+        @include set-font(h1);
 
         color: inherit;
     }
@@ -37,7 +37,7 @@
     }
 
     .cta {
-        @extend %text-helper-label;
+        @include set-font(helper-label);
 
         font-weight: bold;
         text-transform: capitalize;
@@ -45,7 +45,7 @@
 
     .boxed p,
     .container p {
-        @extend %text-body-large;
+        @include set-font(body-large);
 
         margin: 0 auto;
         max-width: 100%;
